<resources>
    <string name="app_name">MASTERMIND K</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="record">Game Record</string>
    <string name="settings">Settings</string>
    <string name="instruction">Instruction</string>
    <string name="hint1">correct guess on both color and position</string>
    <string name="hint2">correct guess on color only but not on position</string>
    <string name="hint3">incorrect guess on both color and position </string>
    <string-array name="num_color_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="num_attempt_array">
        <item>6</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>30</item>
    </string-array>


    <string name="bingo">BINGO</string>
    <string name="time_spent">Time Spent: </string>
    <string name="num_attempt">Number of attempt : </string>
    <string name="lose">You lose</string>
    <string name="ok_to_reset">Click OK to reset game</string>
    <string name="guess_incomplete">Your guess is not complete!</string>
    <string name="remain_attempt">Remaining Attempt(s): </string>
    <string name="sure_quit_game">Are you sure you quit the game?</string>
</resources>
