<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MM_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.andieheung.mastermind_kotlin_mvvm.help.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MM_title"
        android:padding="15dp"
        android:text="@string/instruction"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MM_gameSettingTxt"
        android:text="Meanings of Symbols"
        android:layout_gravity="left" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/hint1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/hint1"
            style="@style/MM_gameSettingTxt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/hint2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/hint2"
            style="@style/MM_gameSettingTxt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/hint3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/hint3"
            style="@style/MM_gameSettingTxt"/>
    </LinearLayout>
    <Button
        android:id="@+id/bk_to_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Game"
        android:background="@drawable/btn_bg_yl"
        android:padding="5dp"
        style="@style/MM_gameBtn"/>

</LinearLayout>